# kindershield

./: .env.example  .gitignore  LICENSE  README.md
.claude/: settings.local.json
evals/: README.md  cli.py  eval_cli.py  pyproject.toml  results.json
evals/reports/: math_report.html  report.html
evals/results/: math.json
evals/src/kindershield/: __init__.py  cli.py  config.py  runner.py
evals/src/kindershield/providers/: __init__.py  anthropic_provider.py  dummy_provider.py  openai_provider.py
evals/src/kindershield/report/: __init__.py  html_report.py  svg_badge.py
evals/src/kindershield/scoring/: __init__.py  rules.py
evals/suites/: math_5_7.yaml  reading_5_7.yaml  safety_5_7.yaml
evals/test_reports/: report.html
evals/tests/: __init__.py  test_scoring_functions.py
evals/tests/fixtures/: sample_basic_math.yaml  sample_reading_skills.yaml  sample_safety_check.yaml
site/src/app/: page.tsx
