[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kindershield"
version = "0.1.0"
description = "AI safety evaluation framework for child-appropriate content"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "KinderShield Team"}
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "typer>=0.9.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
kindershield = "kindershield.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true